# aioe2

./: .env.example  .gitignore  .pre-commit-config.yaml  edit.plan.md  plan.django.md  plan.md  plan.transcription-quality-check.md  pyproject.toml  raport.plan.md  refactor.frontend.plan.md  requirements.txt  rules.md
apps/projects/: admin.py  models.py  serializers.py  urls.py  views.py
apps/transcriptions/: admin.py  apps.py  dependencies.py  edits.py  models.py  serializers.py  tasks.py  urls.py  views.py  web_urls.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
infrastructure/llm/: lm_studio_client.py  openai_compatible_client.py
libs/transcriber/: .env.example  README.md  plan.transcription.md  pyproject.toml
libs/transcriber/src/transcriber/: __init__.py  asr.py  cli.py  config.py  diarization.py  export.py  fusion.py  fusion_v2.py  identity.py  media_assets.py  pipeline.py  pipeline_v2.py  preprocess.py
libs/transcriber/src/transcriber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
libs/transcriber/tests/integration/: test_full_pipeline.py
libs/transcriber/tests/unit/: test_diarization.py  test_export.py  test_fusion.py  test_fusion_v2.py  test_identity.py  test_preprocess.py
services/transcription/: schemas.py  service.py  youtube.py
services/transcription2/: __init__.py  service.py
services/transcription_quality/: __init__.py  schemas.py  service.py
services/transcription_report/: __init__.py  schemas.py  service.py
templates/: base.html
templates/transcriptions/: _folder_selector_form.html  _media_player_block.html  _segments_table.html  _sync_star_controls.html  _timeline_index.html  _viewer_panel.html  (+1 more)
(+55 files in other folders)
