[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16",
    "celery[redis]>=5.4",
    "pydantic>=2.0",
    "django-environ>=0.11",
    # transcription pipeline — local dev:
    # "transcriber @ file:///path/to/transcriber",
    # prod:
    # "transcriber @ git+https://github.com/org/transcriber.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
    "pytest-cov>=7",
    "pytest-timeout>=2.3",
    "factory-boy>=3.3",
    "ruff",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
testpaths = ["tests", "libs/transcriber/tests"]
pythonpath = [".", "libs/transcriber/src"]
timeout = 3600

[tool.ruff]
line-length = 100
target-version = "py311"
