[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriber"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyannote.audio>=3.1",
    "faster-whisper>=1.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "ffmpeg-python>=0.2",
    "torch>=2.2",
    "scipy>=1.12",
]

[project.scripts]
transcriber = "transcriber.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-timeout>=2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 3600
